fixed page spacing

--- a/css/style.scss
+++ b/css/style.scss
@@ -192,6 +192,12 @@ section {
   }
 }
 
+#pricing-feature {
+  .feature {
+    height: 200px;
+  }
+}
+
 .post-meta {
   color: #666;
   margin-bottom: 10px;
@@ -549,10 +555,6 @@ span.green {
   .col-lg-4 {
     margin-bottom: 20px;
   }
-}
-
-#highlights hr {
-  margin-top: 0;
 }
 
 #highlights hr {
